# egui_xml

./: Cargo.toml  LICENSE  README.md  test.txt
.github/workflows/: rust.yml
examples/: dynamic_insertion.rs  file.rs  full.rs  simple.rs
macros/: Cargo.toml  test.yml
macros/src/: lib.rs  utils.rs
macros/src/layout/: mod.rs  strip.rs
parser/: Cargo.toml  test1.fmt
parser/src/: core.rs  fmt.rs  lib.rs
src/: lib.rs
tests/: border.xml  custom.xml  strip.xml
