[package]
name = "egui_xml_macros"
version = "0.1.0"
edition = "2021"
description = "macros for egui_xml"
license = "MIT"
github = "https://github.com/GodGotzi/egui_xml/tree/main/macros"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
quote_into = "0.2.0"
proc-macro2 = "1.0"
egui_xml_parser = { version = "0.1.1", path = "../parser" }
strum_macros = "0.26"
strum = "0.26"
