[package]
name = "egui_xml_parser"
version = "0.1.0"
edition = "2021"
description = "A parser for crate egui_xml"
license = "MIT"

[dependencies]
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = ">=1.0.139" }
serde_derive = { version = "1.0.139" }
serde-value = "0.7"
egui = "0.27.2"
proc-macro2 = "1.0"
quote = "1.0"
